--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="base.css">
   </head>
-  <body>
+  <body  class="works_on_smartphone" >
     <header>
       <ul>
+        <li class="logo">&#129419;</li>
         <li><a href="index.html">Homepage</a></li>
         <li><a href="./tweets.html">Tweet</a></li>
       </ul>
