--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -53,22 +53,22 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <tr class="even">
               <td>John</td>
               <td>25</td>
               <td>USA</td>
             </tr>
-            <tr>
+            <tr class="odd">
               <td>Emily</td>
               <td>28</td>
               <td>Canada</td>
             </tr>
-            <tr>
+            <tr class="even">
               <td>Michael</td>
               <td>32</td>
               <td>Australia</td>
             </tr>
-             <tr>
+             <tr class="odd">
               <td>Sophia</td>
               <td>21</td>
               <td>UK</td>
