--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -11,57 +11,63 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <img src="./images/logo.png" alt="logo" />
-
-        <ul>
-          <li><a href="#">COURSE</a></li>
-          <li><a href="#">PRICING</a></li>
-          <li><a href="#">LOGIN</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section>
-        <div>
-          <h1>Get schooled</h1>
-          <span>SMILES</span>
-          <span>GRIN</span>
-          <span>LAUGH</span>
-          <button>REGISTER FOR FREE</button>
-        </div>
-        <div>
-          <h2>Learn from the pros</h2>
-          <div>
+    <div class="hero">
+        <header>
+          <nav>
+            <img src="./images/logo.png" alt="logo" />
+            <ul>
+              <li><a href="#">COURSE</a></li>
+              <li><a href="#">PRICING</a></li>
+              <li><a href="#">LOGIN</a></li>
+            </ul>
+          </nav>
+        </header>
+        <main>
+          <section>
             <div>
-              <img src="./images/1.png" alt="" />
-              <h3>Phillip Massey</h3>
-              <p>« Smile of the year » 2018 - 2019</p>
+              <h1>Get schooled</h1>
+              <div class="hero-sub">
+                  <span>SMILES</span>
+                  <span>GRIN</span>
+                  <span>LAUGH</span>
+              </div>
+              <button class="register">REGISTER FOR FREE</button>
             </div>
             <div>
-              <img src="./images/3.png" alt="" />
-              <h3>Nannie Lawrence</h3>
-              <p>Best « little smile » 2017</p>
+              <h2 class="cta"><span id="learn">Learn</span> from the pros</h2>
+                <div class="pros">
+                    <div class="pro">
+                      <img src="./images/1.png" alt="" />
+                      <h3>Phillip Massey</h3>
+                      <p>« Smile of the year » 2018 - 2019</p>
+                    </div>
+                    <div class="pro">
+                      <img src="./images/3.png" alt="" />
+                      <h3>Nannie Lawrence</h3>
+                      <p>Best « little smile » 2017</p>
+                    </div>
+                    <div class="pro">
+                      <img src="./images/2.png" alt="" />
+                      <h3>Bruce Walters</h3>
+                      <p>Best « Friend Smile » live performance 2019</p>
+                    </div>
+                    <div class="pro">
+                      <img src="./images/4.png" alt="" />
+                      <h3>Henry Hughes</h3>
+                      <p>« 24h smiles » winner 2016 - 2019</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+          <section>
+            <div>
+              <img src="./images/5.png" alt="image" />
             </div>
             <div>
-              <img src="./images/2.png" alt="" />
-              <h3>Bruce Walters</h3>
-              <p>Best « Friend Smile » live performance 2019</p>
-            </div>
-            <div>
-              <img src="./images/4.png" alt="" />
-              <h3>Henry Hughes</h3>
-              <p>« 24h smiles » winner 2016 - 2019</p>
-            </div>
-          </div>
-        </div>
+      </div>
       </section>
-      <section>
-        <div>
-          <img src="./images/5.png" alt="image" />
-        </div>
-        <div>
+    </div>
           <blockquote>
             « Those tutorials are concise and go straight to the point. I can’t
             think of a better place to learn smiling. And it’s so fun!
